--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Intro to AJAX Practice Tasks</title>
-    <script src="src/index.js" charset="utf-8"></script>
   </head>
   <body>
     <h1>Dog CEO</h1>
 
-    <div id="dog-image-container">
-      <!-- images here -->
-    </div>
+    <div id="dog-image-container"><!-- images here --></div>
 
-    <hr>
+    <hr />
     <label for="select-breed">Filter Breeds That Start with:</label>
     <select id="breed-dropdown" name="select-breed">
       <option value="a">a</option>
@@ -21,9 +18,7 @@
       <option value="d">d</option>
     </select>
 
-    <ul id="dog-breeds">
-
-    </ul>
-
+    <ul id="dog-breeds"></ul>
+    <script src="src/index.js" charset="utf-8"></script>
   </body>
 </html>
