Finished breed list

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 
     <ul id="dog-breeds"></ul>
     <script src="src/index.js" charset="utf-8"></script>
+    <script src="src/index2.js" charset="utf-8"></script>
   </body>
 </html>
